--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Caver1K.net</title>
-    <meta property="og:title" content="Electric Jovial Wildcat" />
+    <meta property="og:title" content="Caver1K.net Website" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
