Aktualisieren von index.html
changed None description

--- a/index.html
+++ b/index.html
@@ -377,7 +377,8 @@
                             <fragment class="home-fragment36">
                               <span class="home-text44">
                                 I didnt know what else to put here, if you have
-                                any suggestion, tell me.
+                                any suggestion, tell me. I do not have Facebook, Instagram or Twitter, there is no point suggesting that.
+
                               </span>
                             </fragment>
                           </span>
@@ -414,7 +415,8 @@
                             <fragment class="home-fragment37">
                               <span class="home-text45">
                                 I didnt know what else to put here, if you have
-                                any suggestion, tell me.
+                                any suggestion, tell me. I do not have Facebook, Instagram or Twitter, there is no point suggesting that.
+
                               </span>
                             </fragment>
                           </span>
@@ -449,7 +451,8 @@
                             <fragment class="home-fragment38">
                               <span class="home-text46">
                                 I didnt know what else to put here, if you have
-                                any suggestion, tell me.
+                                any suggestion, tell me. I do not have Facebook, Instagram or Twitter, there is no point suggesting that.
+
                               </span>
                             </fragment>
                           </span>
