Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   <div class="team1-content10">
                     <h2 class="thq-heading-2 team1-text10">
                       <fragment class="home-fragment13">
-                        <span class="home-text17">Caver1K</span>
+                        <span class="home-text17">Caver1K.net</span>
                       </fragment>
                     </h2>
                     <p class="thq-body-large team1-text11">
@@ -80,8 +80,8 @@
                           </span>
                           <br />
                           <span>
-                            If you want to contact me in any way. This is where
-                            you can find me:
+                            If you want to contact me in any way. I made this website just for fun so it may be outdated. Latest Update: 12/09/2025
+                            
                           </span>
                           <br />
                         </span>
