Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                         <span class="home-text11">
                           <span>
                             This is the website of Caver1K and I use this domain
-                            for testing stuff. Thats about it.
+                            for testing stuff.  Thats about it. I made this website just for fun so it may be outdated. If you want to view the source code, it's located in the "Caver1K.net" repo on my Github. Latest Update: 12/09/2025
                           </span>
                           <br />
                           <span>
-                            If you want to contact me in any way. I made this website just for fun so it may be outdated. Latest Update: 12/09/2025
+                            If you want to contact me in any way. This is where you can contact me:
                             
                           </span>
                           <br />
@@ -198,7 +198,7 @@
                                 My username has a 2 at the end because Caver1K
                                 was somehow already taken. I usually just play
                                 Slap Battles, Rarity miner and sometimes
-                                something else
+                                something else.
                               </span>
                             </fragment>
                           </span>
@@ -249,8 +249,8 @@
                             <fragment class="home-fragment33">
                               <span class="home-text41">
                                 All your going to find here is bad code written
-                                by AI. I dont know why you would want to go
-                                there
+                                by AI. I dont know why anyone would want to go
+                                there.
                               </span>
                             </fragment>
                           </span>
