--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                   <div class="team1-row1">
                     <div class="team1-container2">
                       <div class="team1-card1">
+                        <a href="https://caver1k.net/discord" target="_blank" rel="noopener noreferrer">
                         <svg
                           width="256"
                           height="256"
@@ -124,6 +125,7 @@
                             </defs>
                           </g>
                         </svg>
+                        </a>
                         <div class="team1-container3">
                           <div class="team1-title1">
                             <a
