--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                   <div class="team1-row1">
                     <div class="team1-container2">
                       <div class="team1-card1">
-                        <a href="https://caver1k.net/discord" target="_blank" rel="noopener noreferrer">
+                        <a href="https://discord.gg/84Yc4trC" target="_blank" rel="noopener noreferrer">
                         <svg
                           width="256"
                           height="256"
@@ -166,11 +166,13 @@
                         </div>
                       </div>
                       <div class="team1-card2">
+                        <a href="https://www.roblox.com/users/3013475676/profile" target="_blank" rel="noopener noreferrer">
                         <img
                           alt="pastedImage"
                           src="public/external/pastedimage-ms3a-200h.png"
                           class="team1-pasted-image"
                         />
+                        </a>
                         <div class="team1-content13">
                           <div class="team1-title2">
                             <a
@@ -209,6 +211,7 @@
                     </div>
                     <div class="team1-container5">
                       <div class="team1-card3">
+                        <a href="https://github.com/Caver1K" target="_blank" rel="noopener noreferrer">
                         <svg
                           width="48"
                           height="48"
@@ -224,6 +227,7 @@
                             ></path>
                           </g>
                         </svg>
+                      </a>
                         <div class="team1-content14">
                           <div class="team1-title3">
                             <a
@@ -251,7 +255,7 @@
                             <fragment class="home-fragment33">
                               <span class="home-text41">
                                 All your going to find here is bad code written
-                                by AI. I dont know why anyone would want to go
+                                partly by AI. I dont know why anyone would want to go
                                 there.
                               </span>
                             </fragment>
@@ -259,6 +263,7 @@
                         </div>
                       </div>
                       <div class="team1-card4">
+                        <a href="mailto:contact@caver1k.net?subject=Contact" target="_blank" rel="noopener noreferrer">
                         <svg
                           width="24"
                           height="24"
@@ -270,6 +275,7 @@
                             fill="currentColor"
                           ></path>
                         </svg>
+                        </a>
                         <div class="team1-content15">
                           <div class="team1-title4">
                             <a
@@ -306,11 +312,13 @@
                   <div class="team1-row2">
                     <div class="team1-container6">
                       <div class="team1-card5">
+                        <a href="https://www.youtube.com/@Caver1K" target="_blank" rel="noopener noreferrer">
                         <img
                           alt="image"
                           src="public/pngwing.com-200h.png"
                           class="team1-image"
                         />
+                        </a>
                         <div class="team1-container7">
                           <div class="team1-title5">
                             <a
