--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         </div>
                       </div>
                       <div class="team1-card4">
-                        <a href="mailto:contact@caver1k.net?subject=Contact" target="_blank" rel="noopener noreferrer">
+                        <a href="mailto:contact@caver1k.net?subject=Contact">
                         <svg
                           width="24"
                           height="24"
