--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@
                         </div>
                       </div>
                       <div class="team1-card6">
+                        <a href="caver1k.net/NoProfile" target="_blank" rel="noopener noreferrer">
                         <svg
                           width="256"
                           height="256"
@@ -370,6 +371,7 @@
                             fill="currentColor"
                           ></path>
                         </svg>
+                        </a>
                         <div class="team1-content16">
                           <div class="team1-title6">
                             <span class="team1-text27 thq-body-small">
@@ -397,6 +399,7 @@
                     </div>
                     <div class="team1-container9">
                       <div class="team1-card7">
+                        <a href="caver1k.net/NoProfile" target="_blank" rel="noopener noreferrer">
                         <svg
                           width="256"
                           height="256"
@@ -408,6 +411,7 @@
                             fill="currentColor"
                           ></path>
                         </svg>
+                        </a>
                         <div class="team1-content17">
                           <div class="team1-title7">
                             <span class="team1-text30 thq-body-small">
@@ -433,6 +437,7 @@
                         </div>
                       </div>
                       <div class="team1-card8">
+                        <a href="caver1k.net/NoProfile" target="_blank" rel="noopener noreferrer">
                         <svg
                           width="256"
                           height="256"
@@ -444,6 +449,7 @@
                             fill="currentColor"
                           ></path>
                         </svg>
+                        </a>
                         <div class="team1-content18">
                           <div class="team1-title8">
                             <span class="team1-text33 thq-body-small">
