--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                         </div>
                       </div>
                       <div class="team1-card6">
-                        <a href="https://caver1k.net/NoProfile/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://caver1k.net/NoProfile" target="_blank" rel="noopener noreferrer">
                         <svg
                           width="256"
                           height="256"
@@ -399,7 +399,7 @@
                     </div>
                     <div class="team1-container9">
                       <div class="team1-card7">
-                        <a href="https://caver1k.net/NoProfile/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://caver1k.net/NoProfile" target="_blank" rel="noopener noreferrer">
                         <svg
                           width="256"
                           height="256"
@@ -437,7 +437,7 @@
                         </div>
                       </div>
                       <div class="team1-card8">
-                        <a href="https://caver1k.net/NoProfile/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://caver1k.net/NoProfile" target="_blank" rel="noopener noreferrer">
                         <svg
                           width="256"
                           height="256"
