Aktualisieren von index.html
Reformulated the headder text

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                           </span>
                           <br />
                           <span>
-                            If you want to contact me in any way. This is where you can contact me:
+                            If you want to contact me in any way or view some of my profiles. This is where you can contact me or view my profiles:
                             
                           </span>
                           <br />
