--- a/index.html
+++ b/index.html
@@ -481,9 +481,9 @@
                   <div class="team1-content20">
                     <span class="thq-body-small team1-text37">
                       <fragment class="home-fragment12">
-                        <span class="home-text16" style="font-size: 0.8em;>
-                          "&copy; Caver1K 2025
-						  I would like to know about any copies/extentions."
+                        <span class="home-text16" style="font-size: 0.8em;">
+                          &copy; Caver1K 2025
+						  I would like to know about any copies/extentions.
                       </span>
                     </fragment>
                   </span>
