--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                   <div class="team1-content20">
                     <span class="thq-body-small team1-text37">
                       <fragment class="home-fragment12">
-                        <span class="home-text16" style="text-align: center; "font-size: 0.8em;">
+                        <span class="home-text16" style="text-align: center; font-size: 0.8em;">
                           &copy; Caver1K 2025<br>
 						  I would like to know about any copies/extentions.
                       </span>
