--- a/index.html
+++ b/index.html
@@ -484,12 +484,12 @@
     </div>
 	<div class="team1-content19">
 		<div class="team1-content20">
-			<span class="thq-body-small team1-text37">
-				<fragment class="home-fragment12">
-					<span class="home-text16" style="text-align: center; font-size: 0.8em;">
- 			 					  &copy; Caver1K 2025<br>
-									I would like to know about any copies/extentions.
-		</span>
+		  <span class="thq-body-small team1-text37">
+		    <fragment class="home-fragment12">
+			  <div style="text-align: center; margin-top: 40px; font-size: 0.8em;">
+				  &copy; Caver1K 2025<br>
+ 				 I would like to know about any copies/extensions.
+			</div>
 	  </fragment>
 	 </span>
     </div>
