--- a/index.html
+++ b/index.html
@@ -486,10 +486,10 @@
 		<div class="team1-content20">
 		  <span class="thq-body-small team1-text37">
 		    <fragment class="home-fragment12">
-			  <div style="text-align: center; margin-top: 40px; font-size: 0.8em;">
+			  <span class="fotter-text">
 				  &copy; Caver1K 2025<br>
  				 I would like to know about any copies/extensions.
-			</div>
+			  </span>
 	  </fragment>
 	 </span>
     </div>
