--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <a href="https://www.roblox.com/users/3013475676/profile" target="_blank" rel="noopener noreferrer">
                         <img
                           alt="pastedImage"
-                          src="public/external/pastedimage-ms3a-200h.png"
+                          src="public/roblox.png"
                           class="team1-pasted-image"
                         />
                         </a>
@@ -315,7 +315,7 @@
                         <a href="https://www.youtube.com/@Caver1K" target="_blank" rel="noopener noreferrer">
                         <img
                           alt="image"
-                          src="public/pngwing.com-200h.png"
+                          src="public/youtube.png"
                           class="team1-image"
                         />
                         </a>
