--- a/index.html
+++ b/index.html
@@ -382,9 +382,11 @@
                                 </span>
                               </fragment>
                             </a>
-								<a 
+							<a 
 							  href="https://www.reddit.com/user/Caver1K/" target="_blank" rel="noreferrer noopener" class="team1-text25 thq-body-small">
+								<fragment class="home-fragment22">
                                 <span class="home-text22">Caver1K</span>
+								</fragment>
 								</a>
                               </fragment>
                             </span>
