--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                           </span>
                         </div>
                       </div>
-                      <div class="team1-card6">
+                      <div class="team1-pasted-image">
                         <a href="https://www.reddit.com/user/Caver1K/" target="_blank" rel="noopener noreferrer">
                         <img
                           alt="image"
