--- a/index.html
+++ b/index.html
@@ -358,43 +358,38 @@
                           </span>
                         </div>
                       </div>
-                      <div class="team1-pasted-image">
-                        <a href="https://www.reddit.com/user/Caver1K/" target="_blank" rel="noopener noreferrer">
-                        <img
-                          alt="image"
-                          src="public/reddit.png"
-                          class="team1-image"
-                        />
+                      <div class="team1-card6">
+                        <a href="https://caver1k.net/NoProfile" target="_blank" rel="noopener noreferrer">
+                        <svg
+                          width="256"
+                          height="256"
+                          viewBox="0 0 256 256"
+                          class="team1-icon24"
+                        >
+                          <path
+                            d="M208 34H48a14 14 0 0 0-14 14v160a14 14 0 0 0 14 14h160a14 14 0 0 0 14-14V48a14 14 0 0 0-14-14m2 14v153.52L54.49 46H208a2 2 0 0 1 2 2M46 208V54.48L201.51 210H48a2 2 0 0 1-2-2"
+                            fill="currentColor"
+                          ></path>
+                        </svg>
                         </a>
                         <div class="team1-content16">
                           <div class="team1-title6">
                             <span class="team1-text27 thq-body-small">
-                            <a
-                              href="https://www.reddit.com/"
-                              target="_blank"
-                              rel="noreferrer noopener"
-                              class="team1-text25 thq-body-small"
-                            >
-                              <fragment class="home-fragment25">
-                                <span class="home-text31">
-                                  <span>Reddit</span>
-                                  <br />
-                                </span>
+                              <fragment class="home-fragment21">
+                                <span class="home-text27">None</span>
                               </fragment>
-                            </a>
-							<a 
-							  href="https://www.reddit.com/user/Caver1K/" target="_blank" rel="noreferrer noopener" class="team1-text25 thq-body-small">
-								<fragment class="home-fragment22">
-                                <span class="home-text22">Caver1K</span>
-								</fragment>
-								</a>
+                            </span>
+                            <span class="team1-text28 thq-body-small">
+                              <fragment class="home-fragment18">
+                                <span class="home-text22">None</span>
                               </fragment>
                             </span>
                           </div>
                           <span class="team1-text29 thq-body-small">
                             <fragment class="home-fragment36">
                               <span class="home-text44">
-                                This is my Reddit profile, I just have it for when I cannot find help on other platforms and ask a reddit community, nothing interesting there. 
+                                I didnt know what else to put here, if you have
+                                any suggestion, tell me. I do not have Facebook, Instagram or Twitter, there is no point suggesting that.
 
                               </span>
                             </fragment>
